--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^9.1.2",
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.9"
