--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
     "start": "NODE_ENV=production node index",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^9.1.2",
-    "@hapi/joi": "^15.0.3",
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.9"
