--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "DEBUG=app:* nodemon index",
     "start": "NODE_ENV=production node index",
     "prepare": "husky install",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "cover": "nyc npm run test",
+    "report": "nyc report --reporter=html && cmd.exe /C start coverage/index.html"
   },
   "keywords": [],
   "author": "",
@@ -25,10 +27,24 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
+    "mocha": "^9.0.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.1"
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^11.1.1",
+    "supertest": "^6.1.3"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "routes",
+      "services",
+      "lib",
+      "utils"
+    ]
   }
 }
