--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
     "start": "NODE_ENV=production node index",
+    "build": "movies-api build",
     "prepare": "husky install",
     "test": "mocha --exit",
     "cover": "nyc npm run test",
